# lib/api-spec/openapi.yaml
@@ -217,6 +217,12 @@ paths:
           required: false
           schema:
             type: string
+        - name: deadlineBefore
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
       responses:
         "200":
           description: Tasks
